tests/machine/x/st/map_int_key.st
| m |
m := Dictionary newFrom:{1->'a'. 2->'b'}.
Transcript show: (m at: 1) printString; cr.
